GUI-4212 fix z-index of waiting icon in datastore grid

--- a/assets/stylesheets/less/partials/datastore.less
+++ b/assets/stylesheets/less/partials/datastore.less
@@ -1239,6 +1239,13 @@ input {
             &.drag .dragWrap {
                 z-index: 99;
             }
+
+            .waitingIcon {
+                z-index: 20;
+            }
+            .hidden .waitingIcon {
+                display: none !important;
+            }
         }
     }
     /* End Of Content Left */
